alterando nome arquivo para index para deploy

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <img src="img/ondas.png" alt="Voz Autista" class="decoracao-baixo">
     <a href="sobre.html" class="link-saiba-mais">Saiba mais desse projeto</a>
   </div>
-  <script src="cadastro.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
 
