--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
       <input type="text" id="nomeContato" required>
 
       <label for="telefoneContato">Telefone do contato de emergência:</label>
-      <input type="tel" id="telefoneContato" placeholder="(11) 99999-9999"  pattern="\(\d{2}\) \d{4,5}-\d{4}" 
-  title="Digite no formato (11) 99999-9999" required>
+      <input type="tel" id="telefoneContato" placeholder="(11) 99999-9999" required>
 
       <button type="submit">ENVIAR</button>
     </form>
