inserindo link do site do voz autista!

--- a/sobre.html
+++ b/sobre.html
@@ -11,7 +11,7 @@
   <div class="container">
     <img src="img/Header.png" alt="Cabeçalho SOS Fala, autista!" class="header-img">
    
-  <section> Seja bem-vindo a mais um galho do projeto Voz Autista. Esse dispositivo de comunicação emergencial é uma resposta a uma questão muito trazida por nossos acolhidos nos encontros do "Fala, autista!": a dificuldade de se manter seguro durante crises na rua. Este é um protótipo que visa amparar a comunicação emergencial, oferecendo condições de autonomia e comunicação aos nossos acolhidos. Nos escreva através do email contato@vozautista.com e nos conte como foi sua experiência utilizando o SOS </section>
+  <section> Seja bem-vindo a mais um galho do projeto <a href="https://vozautista.com/""> Voz Autista.</a> Esse dispositivo de comunicação emergencial é uma resposta a uma questão muito trazida por nossos acolhidos nos encontros do "Fala, autista!": a dificuldade de se manter seguro durante crises na rua. Este é um protótipo que visa amparar a comunicação emergencial, oferecendo condições de autonomia e comunicação aos nossos acolhidos. Nos escreva através do email contato@vozautista.com e nos conte como foi sua experiência utilizando o SOS </section>
 
     <img src="img/ondas.png" alt="Voz Autista" class="decoracao-baixo">
     </div>
