melhorando responsive voice

--- a/principal.html
+++ b/principal.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <script src="<script src="https://code.responsivevoice.org/responsivevoice.js?key=neL0mHXN"></script>"></script>
+  <script src="https://code.responsivevoice.org/responsivevoice.js?key=neL0mHXN"></script>
   <title>SOS - Fala, Autista!</title>
   <link rel="stylesheet" href="style.css" />
 </head>
